# chatter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: agent.py  benchmark_memory.py  config.py  lang_agent.py  main.py  memory_base.py  memory_chroma.py  memory_mem0.py  memory_zerog.py  monkeypatch_blockers.py  similarity_utils.py  timing_utils.py
src/similarity/: llm_judge.py
