[project]
name = "chatter"
version = "0.1.0"
description = "An Agentic AI Chatbot with Memory"
dependencies = [
    "mem0",
    "ollama",
    "langchain",
    "langchain-community",
    "langchain-chroma",
    "langchain-ollama",
    "chromadb",
    "ollama",
]
requires-python = ">=3.9"

[build-system]
requires = ["uv>=0.1.11"]
build-backend = "uv.build"